# log-processing

./: CMakeLists.txt  README.md
include/: comp_club_system.h  utils.h
src/: CMakeLists.txt  comp_club_system.cpp  main.cpp  utils.cpp
test/: CMakeLists.txt  CompClubTest.cpp  nameTest.cpp  parseEventTest.cpp  parseNumTest.cpp  parseTimeTest.cpp  printEventTest.cpp
test_files/: broken1.txt  broken2.txt  broken3.txt  broken4.txt
